ustring: Remove unused template arguments

https://bugzilla.gnome.org/show_bug.cgi?id=784211